--- a/.github/workflows/DCO.yml
+++ b/.github/workflows/DCO.yml
@@ -1,17 +1,18 @@
-name: DCO
+name: DCO Check
 on: [pull_request]
 
 jobs:
-  commits_check_job:
+  dco_check:
     runs-on: ubuntu-latest
-    name: Commits Check
+    name: DCO Check
+    if: ${{ github.actor != 'dependabot[bot]' }}
     steps:
     - name: Get PR Commits
       id: 'get-pr-commits'
-      uses: tim-actions/get-pr-commits@master
+      uses: tim-actions/get-pr-commits@v1.3.1
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
     - name: DCO Check
-      uses: tim-actions/dco@master
+      uses: tim-actions/dco@v1.1.0
       with:
         commits: ${{ steps.get-pr-commits.outputs.commits }}
